# agent-stress-test

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: settings.example.yaml
config/agents/: agent_toolkit.yaml  example_http_target.yaml  example_provider_target.yaml  example_subprocess_target.yaml  example_tool_calling_verification.yaml  sample_support.yaml  sample_support_advanced.yaml
config/agents/examples/: example_python_target.yaml
doc/: GETTING_STARTED.md
scripts/: example_subprocess_target.py  measure_metric_costs.py
src/agent_stress_test/: __init__.py  cli.py  composition.py  config.py  config_writer.py  models.py  ports.py
src/agent_stress_test/orchestration/: cross_run.py  deepeval_search.py  executive_summary.py  regression.py  reliability.py  rule_coverage.py  runner.py  search.py  tree.py  tree_viz.py
src/agent_stress_test/providers/: embedder.py  fake.py  litellm_provider.py  shaped_fake.py
src/agent_stress_test/reasoning/: calibration.py  clusterer.py  consistency.py  deepeval_bridge.py  deepeval_simulator.py  json_utils.py  judge.py  profiler.py  remediation.py  simulator.py  summary.py
src/agent_stress_test/reasoning/judge/: __init__.py  base.py  conversation.py  llm.py  rules.py  tool_task.py
src/agent_stress_test/report/: export.py  shared.py  terminal.py
src/agent_stress_test/report/dashboard/: live_events.py  prompt_diff.py  server.py
src/agent_stress_test/report/dashboard/templates/: _styles.html  base.html  export.html  index.html  macros.html  profile.html  regression.html  run.html
src/agent_stress_test/report/dashboard/templates/fragments/: applied_fix.html  candidate_rule_applied.html  cluster_table.html  conversation_verdicts_section.html  cross_run_section.html  diff_blocks.html  failure_row.html  llm_summary.html  near_miss_panel.html  persona_row.html  personas_picker.html  profile_editor.html  profile_generate_result.html  prompt_history.html  regression_row.html  regression_table.html  reliability_gauge.html  rule_coverage_section.html  rule_row.html  rules_section.html  run_form.html  status_badge.html  suggestion_panel.html  summary_panel.html  transcript.html  transcripts_section.html  tree_viz_section.html
src/agent_stress_test/store/: migrations.py  sqlite_store.py
src/agent_stress_test/targets/: examples.py  http_agent.py  prompt_rendering.py  provider_agent.py  python_fn.py  react_parsing.py  sample_agent.py  sample_agent_advanced.py  subprocess_agent.py  tool_backends.py  tool_calling_verification_agent.py  wire_protocol.py
tests/: conftest.py  test_advanced_agent_spec.py  test_architecture.py  test_calibration.py  test_cli.py  test_clusterer.py  test_composition.py  test_config.py  test_consistency.py  test_cross_run.py  test_dashboard_server.py  test_deepeval_bridge.py  test_deepeval_search.py  test_deepeval_simulator.py  test_executive_summary.py  test_export.py  test_fake_provider.py  test_judge.py  test_judge_conversation.py  test_judge_llm.py  test_judge_metrics.py  test_judge_rules.py  test_litellm_provider.py  test_live_events.py  test_migrations.py  test_models.py  test_orchestration.py  test_ports.py  test_profiler.py  test_react_parsing.py  test_regression.py  test_reliability.py  test_remediation.py  test_rule_coverage.py  test_sample_agent_advanced.py  test_shaped_fake.py  test_simulator.py  test_store.py  test_summary.py  test_targets.py  (+4 more)
tests/fixtures/agents/: sample_support_advanced.yaml
