[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-stress-test"
version = "0.1.0"
description = "Pre-deployment adversarial stress-testing for AI agents."
requires-python = ">=3.11"
dependencies = [
    "litellm",
    "pydantic",
    "rich",
    "textual",
    "pyyaml",
    "python-dotenv",
    "httpx",
    "fastapi",
    "uvicorn",
    "jinja2",
    "python-multipart",
    "pysbd",
    "deepeval>=4.1.1",
    # Runs the vendored agent-toolkit real-world target agent in-process
    # (src/agent_stress_test/targets/agent_toolkit_target.py). Not used by
    # this codebase's own core.
    "anthropic",
    "pydantic-settings",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
agent-stress-test = "agent_stress_test.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_stress_test"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]
