[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-stress-test"
version = "0.1.0"
description = "Pre-deployment adversarial stress-testing for AI agents."
requires-python = ">=3.11"
dependencies = [
    # Upper-bounded at the next major version -- litellm and deepeval both
    # ship frequent behavior changes across minors/majors, and the main
    # suite runs against fake/shaped providers standing in for their real
    # behavior, so a surprise major bump could silently drift out of sync
    # with what the suite actually verifies.
    "litellm>=1.80,<2.0",
    "pydantic>=2.0,<3.0",
    "rich>=13.0,<15.0",
    "textual>=0.60,<9.0",
    "pyyaml>=6.0,<7.0",
    "python-dotenv>=1.0,<2.0",
    "httpx>=0.27,<1.0",
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.30,<1.0",
    "jinja2>=3.1,<4.0",
    "python-multipart>=0.0.9,<1.0",
    "pysbd>=0.3,<1.0",
    "deepeval>=4.1.1,<5.0",
    # Runs the vendored agent-toolkit real-world target agent in-process
    # (src/agent_stress_test/targets/agent_toolkit_target.py). Not used by
    # this codebase's own core.
    "anthropic>=0.100,<1.0",
    "pydantic-settings>=2.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "bandit",
]

[project.scripts]
agent-stress-test = "agent_stress_test.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_stress_test"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.bandit]
# Adapters (targets/, store/) that intentionally run subprocesses or build SQL
# from internal-only table-name literals justify each finding inline with
# `# nosec <ID>` rather than being blanket-excluded here.
exclude_dirs = ["tests"]
